[package]
name = "blockchain"
version = "0.1.0"
authors = ["panagiotisganelis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.16"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
sha2 = "0.9.1"